# onchain-strategy-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  FOUNDATIONS_ko.md  LICENSE  OVERVIEW.html  PRODUCT-REVIEW.html  README.md  README_ko.md  USE_CASES_ko.md  config.example.toml
.github/workflows/: release.yml
.local/: config.toml  policy.toml  strategy-aave-deposit.js  strategy-self-transfer.js
.local.example/: config.toml  policy.toml
.local/contracts/cache/: solidity-files-cache.json
.local/contracts/src/: BatchExec.sol
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.2-TRIGGER-CORE-DESIGN.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-mcp-runtime-surface/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-strategy-state-and-journal/: 02-01-PLAN.md  02-01-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-javascript-strategy-runner/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-CONTEXT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-evm-context-and-actions/: 04-01-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-REVIEW-FIX.md
.planning/phases/05-simulation-and-policy-gate/: 05-02-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md  deferred-items.md
.planning/phases/06-local-managed-execution/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW-FIX.md  06-REVIEW.md  06-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/executor-core/: Cargo.toml
crates/executor-core/src/: error.rs  lib.rs
crates/executor-evm/: Cargo.toml
crates/executor-evm/src/: _zz_test.rs  action.rs  address.rs  config.rs  dyn_abi.rs  erc20.rs  error.rs  lib.rs  native.rs  normalize.rs  prices.rs  provider.rs  read.rs  simulate.rs  units.rs
crates/executor-evm/tests/: dyn_abi_roundtrip.rs  erc20_helpers_anvil.rs  get_logs_anvil.rs  native_helpers_anvil.rs  normalize.rs  read_contract_anvil.rs  simulate_anvil.rs  simulate_timeout.rs
crates/executor-evm/tests/common/: anvil_fixture.rs  mod.rs
crates/executor-evm/tests/fixtures/: counter.hex  erc20.hex  erc20.sol-src.txt  revert_counter.hex  revert_counter.sol-src.txt
crates/executor-mcp/: Cargo.toml
crates/executor-mcp/src/: alignment.rs  config.rs  contracts_touched.rs  deploy_delegate.rs  errors.rs  init.rs  lib.rs  logging.rs  main.rs  policy_boot.rs  policy_diff.rs  prompts.rs  records.rs  resources.rs  server.rs  tools.rs  validation.rs  web.rs  web_portfolio.rs
crates/executor-mcp/src/triggers/: dispatcher.rs  event.rs  mod.rs  pool.rs  state_adapter.rs  worker.rs
crates/executor-mcp/src/triggers/workers/: interval.rs  log.rs  manual.rs  mempool.rs  mod.rs
crates/executor-mcp/src/web_assets/: app.js  index.html  style.css
crates/executor-mcp/tests/: actions_dispatch.rs  contracts_touched_extractor.rs  destructive_tags.rs  error_hint_contract.rs  execution_actions.rs  execution_list_resource.rs  lineage.rs  policy_alignment.rs  policy_diff_lens.rs  policy_field_kinds.rs  policy_history_include_body.rs  policy_tool.rs  portfolio_aggregation.rs  portfolio_mcp_surface.rs  portfolio_scope_isolation.rs  price_helper.rs  prompt_inventory.rs  prompt_triage_run.rs  prompt_tune_thresholds.rs  runtime_status_resource.rs  stdio_handshake.rs  strategy_bundle_view.rs  strategy_view_get_logs.rs  strategy_view_render_shape.rs  trigger_interval.rs  trigger_log.rs  trigger_mempool.rs  trigger_tools.rs  v1_11_fresh_agent_reproducibility.rs  verification_examples.rs  verification_safety.rs  view_cache_stale.rs  web_api.rs  web_ui_assets.rs
crates/executor-mcp/tests/common/: mod.rs
crates/executor-policy/: Cargo.toml
crates/executor-policy/src/: decision.rs  error.rs  eval.rs  lib.rs  load.rs  model.rs  selector.rs
crates/executor-policy/tests/: eval_chains.rs  eval_contracts.rs  eval_erc20_spend.rs  eval_native_value.rs  eval_raw_calldata.rs  eval_selectors.rs  load_toml.rs
crates/executor-policy/tests/common/: mod.rs
crates/executor-policy/tests/fixtures/: policy.bad_address.toml  policy.deny_all.toml  policy.permissive.toml
crates/executor-signer/: Cargo.toml
crates/executor-signer/src/: config.rs  delegate.rs  error.rs  keychain.rs  lib.rs  local.rs
crates/executor-signer/tests/: local_execution.rs  local_signer.rs
crates/executor-state/: Cargo.toml
crates/executor-state/src/: error.rs  executions.rs  journal.rs  lib.rs  policy_revisions.rs  records_capture.rs  runs.rs  schema.rs  store.rs  strategies.rs  triggers.rs  view_cache.rs
crates/executor-state/tests/: execution_actions.rs  journal_decision_seq.rs  journal_repo.rs  journal_source_read_seq.rs  list_runs.rs  partial_index_behaviour.rs  policy_revisions.rs  run_base_model.rs  run_lifecycle_transition.rs  strategy_roundtrip.rs  view_cache_roundtrip.rs
crates/executor-state/tests/common/: mod.rs
crates/strategy-js/: Cargo.toml
crates/strategy-js/src/: error.rs  lib.rs  limits.rs  runtime.rs  sandbox.rs
crates/strategy-js/tests/: ctx_actions_builders.rs  ctx_actions_negative_grid.rs  ctx_evm_get_logs.rs  ctx_evm_helpers.rs  ctx_evm_read_contract.rs  ctx_host_api.rs  ctx_units_address.rs  runtime_journal_flush.rs  sandbox_entry_shape.rs  sandbox_host_globals.rs  sandbox_limits.rs  trigger_core_event.rs
docs/: CNAME.example  README.md  index.html
examples/contracts/: BatchExec.sol
examples/policies/: local-anvil.toml
examples/strategies/: erc20-approve.js  eth-funnel-bundle.js  eth-funnel.js  generic-counter-call.js  yield-snapshot.js
npm/onchain-strategy-mcp/: README.md  package.json
site/: index.html  styles.css
site/ko/: index.html
(+94 files in other folders)
