[workspace]
resolver = "2"
members = [
    "crates/executor-mcp",
    "crates/executor-core",
    "crates/executor-state",
    "crates/executor-signer",
    "crates/strategy-js",
    "crates/executor-evm",
    "crates/executor-policy",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Stdout discipline (D-05): applied workspace-wide so stdio MCP stays strict JSON-RPC.
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
