[package]
name = "executor-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "executor-mcp"
path = "src/main.rs"

[features]
default = []
# Phase 5 Plan 05-02 / D-08 — opts integration tests in to anvil-gated paths
# (`strategy_run_returns_simulation_failed_when_revert` and any future stdio
# test that requires foundry's `anvil` on PATH). Mirrors the executor-evm
# `anvil-tests` feature (D-14 carry-forward).
anvil-tests = ["alloy/node-bindings"]
# v1.2 Stream E: opts the mempool worker integration test in to live
# Alchemy WSS. Off by default; the test also skips when `ALCHEMY_WSS_URL`
# is unset.
mempool-live-tests = []

[dependencies]
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hex = "0.4"
# v1.5 Track 1B: regex-only static extractor for `contracts_touched`. Pure
# string-matching against strategy source — no AST, no JS parser dep.
regex = "1"
clap = { workspace = true }
alloy-primitives = "1"
# v1.2 Stream E (mempool worker): alloy is now a non-optional dep here so the
# trigger worker can open an Alchemy WSS subscription via the `pubsub` +
# `provider-ws` features. `node-bindings` is still feature-gated behind
# `anvil-tests` for the existing anvil-spawning integration tests.
alloy = { version = "2.0.4", features = ["pubsub", "provider-ws", "rpc-types-eth"] }
futures-util = "0.3"
executor-core = { path = "../executor-core" }
executor-state = { path = "../executor-state" }
executor-signer = { path = "../executor-signer" }
strategy-js = { path = "../strategy-js" }            # Plan 03-03: needed by tools.rs strategy_run handler.
# Phase 4 D-04: executor-evm provides the lazy DynProvider + EvmConfig built
# from the [evm] config section. alloy itself stays per-crate in executor-evm.
executor-evm = { path = "../executor-evm" }
# Phase 5 Plan 05-03: policy DSL load + evaluator (alloy-FREE per D-20).
executor-policy = { path = "../executor-policy" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "signal", "process", "io-util", "time"] }
serde_json.workspace = true
anyhow.workspace = true
# Plan 02-02: integration tests need a temp config file (per-test ephemeral
# `[state].path`) and a temp dir for the restart-persistence test. Pinned
# per-crate to mirror Phase 1's [logging]-only workspace-deps precedent.
tempfile = "3"
rusqlite = { version = "0.39", features = ["bundled"] }
