[package]
name = "executor-signer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { version = "2.0", default-features = false, features = ["provider-http", "rpc-types-eth", "reqwest-rustls-tls", "signer-local", "eips"] }
alloy-primitives = "1"
alloy-sol-types = "1"
executor-core = { path = "../executor-core" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = "0.13"
