[package]
name = "strategy-js"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# New deps (rquickjs) are intentionally NOT promoted to workspace dependencies —
# only `strategy-js` consumes them today, mirroring the Phase 1 `[logging]`-only
# and Phase 2 `rusqlite`-only precedent of letting each Phase land its own
# isolated stack before promotion to workspace scope is justified. (See
# `crates/executor-state/Cargo.toml:10-13` for the original justification.)
[dependencies]
executor-core = { path = "../executor-core" }
# Plan 03-02 Task 3: RuntimeContext holds Arc<tokio::sync::Mutex<StateStore>>
# and flushes buffered logs + source-read marker to the journal tables.
executor-state = { path = "../executor-state" }
# Phase 4 D-02 isolation: strategy-js does NOT depend on alloy directly; it
# depends on executor-evm which encapsulates alloy. The host bindings for
# ctx.evm.* live here, but their bodies delegate to executor-evm functions
# and their EvmError types.
executor-evm = { path = "../executor-evm" }
rquickjs = { version = "0.11", default-features = false }
# tokio::sync::Mutex (RuntimeContext state handle); per-crate pin — mirrors
# executor-mcp's choice (Phase-2 D-03d) over std::sync::Mutex because the
# upstream caller integrates with `spawn_blocking` and `blocking_lock`.
# Feature `sync` is gated separately from `rt-multi-thread` in tokio 1.52, so
# we add it explicitly on top of the workspace defaults.
tokio = { workspace = true, features = ["sync"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Per-crate dev-dep mirroring Phase 2 (executor-state/Cargo.toml:26-27).
tempfile = "3"
